--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,8 @@ jobs:
     - uses: actions/checkout@master
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v2  
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
     - name: send custom message with args
       uses: ./
       with:
