--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,14 +9,19 @@ jobs:
     - uses: actions/checkout@master
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v2
+
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
+
+    - name: Build Docker Image
+      run: docker buildx build --platform linux/amd64 .
+
     - name: send custom message with args
       uses: ./
       with:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
-        args: --platform linux/amd64 The ${{ github.event_name }} event triggered first step.
+        args: The ${{ github.event_name }} event triggered first step.
 
     - name: send message using with
       uses: ./
