--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
       run: chmod +x entrypoint.sh
 
     - name: Build Docker image
-      run: docker build .
+      run: docker build --platform linux/amd64 .
 
     - name: send custom message with args
       uses: ./
