--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,11 +9,9 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Set execute permission
-      run: chmod +x entrypoint.sh
-
-    - name: Build Docker image
-      run: docker build --platform linux/amd64 .
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v2
+    - uses: docker/setup-buildx-action@v2
 
     - name: send custom message with args
       uses: ./
